--- a/etc/kubernetes/manifests/hasher-netpol.yaml
+++ b/etc/kubernetes/manifests/hasher-netpol.yaml
@@ -11,17 +11,27 @@ spec:
             matchLabels:
               name: dca-phpinfo
         -
+          podSelector:
+            matchLabels:
+              app: dca-phpinfo
+      ports:
+        -
+          port: 8080
+          protocol: TCP
+    -
+      from: 
+        -
           namespaceSelector:
             matchLabels:
               name: santander-dockercoins
         -
           podSelector:
             matchLabels:
-              app: dca-phpinfo
-        -
-          podSelector:
-            matchLabels:
               app: worker-label
+      ports:
+        -
+          port: 8080
+          protocol: TCP
       ports:
         -
           port: 8080
