--- a/etc/kubernetes/manifests/redis-rs.yaml
+++ b/etc/kubernetes/manifests/redis-rs.yaml
@@ -25,5 +25,7 @@ spec:
       volumes:
         -
           name: redis-volume
-          emptyDir: {}
+          persistentVolumeClaim: 
+            claimName: redis-pvc
+            readOnly: false
           
