--- a/etc/kubernetes/manifests/redis-pvc.yaml
+++ b/etc/kubernetes/manifests/redis-pvc.yaml
@@ -6,8 +6,10 @@ spec:
   accessModes:
     - ReadWriteOnce
   resources:
-    limits: 1Gi
-    requests: 1Gi
+    limits:
+      storage: 1Gi
+    requests:
+      storage: 1Gi
   # tipo de almacenamiento gp2 --> general purpose 2, es un plugin que provee Amazon
   storageClassName: gp2
     
